fix z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1461,12 +1461,6 @@
       cursor: pointer;
     }
   }
-  .-z-10 {
-    z-index: calc(10 * -1);
-  }
-  .z-0 {
-    z-index: 0;
-  }
   .z-10 {
     z-index: 10;
   }
